crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_impl.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_impl.fin
---
File@0..11
  ItemExpr@0..11
    ExprImpl@0..11
      ImplKw@0..4 "impl"
      Whitespace@4..5 " "
      ExprIdent@5..9
        Ident@5..8 "Foo"
        Whitespace@8..9 " "
      BraceOpen@9..10 "{"
      BraceClose@10..11 "}"
