crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_item.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_item.fin
---
File@0..4
  ItemExpr@0..4
    ExprIdent@0..3
      Ident@0..3 "foo"
    Semi@3..4 ";"
