crates/fin_parser/src/snapshots/fin_parser__tests__insta@expr_ref.fin.snap
---
source: crates/fin_parser/src/lib.rs
expression: tree
input_file: crates/fin_parser/src/snapshots/validation/expr_ref.fin
---
File@0..4
  ItemExpr@0..4
    ExprRef@0..4
      Ampersand@0..1 "&"
      ExprIdent@1..4
        Ident@1..4 "foo"
